# zealthy-onboarding

./: zealthykey.pem  zealthykey.ppk
zealthy_nextjs/: next.config.ts  package-lock.json  package.json
zealthy_nextjs/public/data/: index.html
zealthy_nextjs/src/app/: layout.tsx  page.tsx
zealthy_nextjs/src/app/OnboardingStepThree/: page.tsx
zealthy_nextjs/src/app/OnboardingStepTwo/: page.tsx
zealthy_nextjs/src/app/admin/: page.tsx
zealthy_nextjs/src/app/components/: aboutme.tsx  address.tsx  birthdate.tsx
zealthy_nextjs/src/app/data/: page.tsx
zealthy_nextjs/src/app/styles/: onboarding.css
zealthy_nextjs/src/app/utils/: ComponentContext.tsx  us_states.tsx
zealthy_python/: dockerfile  main.py  pyproject.toml
